--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "drive.2193276171.workers.dev",
+            SCF_GATEWAY: "https://drive.2193276171.workers.dev",
             SITE_NAME: "cloud",
             IS_CF: true
         };
