--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         */
         window.GLOBAL_CONFIG = {
             SCF_GATEWAY: "https://drive.2193276171.workers.dev",
-            SITE_NAME: "cloud",
+            SITE_NAME: "南岩のCloud",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
